@@ -3,6 +3,9 @@
 this repository contains the full copyright notices and license terms. -->
 <tryton>
     <data grouped="1">
+        <record model="ir.message" id="msg_complaint_similar">
+            <field name="text">The complaint "%(complaint)s" is similar to complaint "%(similar)s".</field>
+        </record>
         <record model="ir.message" id="msg_complaint_delete_draft">
             <field name="text">To delete complaint "%(complaint)s" you must reset it to draft state.</field>
         </record>
