@@ -1,3 +1,4 @@
+* Raise a warning when submitting complaint for the same origin
 
 Version 7.2.0 - 2024-04-29
 --------------------------
